Adaptation pour relier au gameEngine